<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.superscript.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_projects"
        android:name="com.example.superscript.ui.projects.ProjectsFragment"
        android:label="@string/title_projects"
        tools:layout="@layout/fragment_projects"
        android:tag="projects" />

    <fragment
        android:id="@+id/navigation_documentation"
        android:name="com.example.superscript.ui.documentation.DocumentationFragment"
        android:label="@string/title_documentation"
        tools:layout="@layout/fragment_documentation" />
</navigation>